# ezcs-url-shortener

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  alembic.ini  env.example  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/workflows/: code-check.yml  deploy-container.yml  deploy.yml  version-check-and-tag.yml
alembic/: env.py
app/: __init__.py  auth.py  cache.py  config.py  database.py  main.py  models.py  schemas.py  utils.py
app/routers/: api_keys.py  urls.py
deployment/: README.md  nginx-site.conf  url-shortener.service
scripts/: deploy.ps1  deploy.sh  sync_version.py
tests/: __init__.py  conftest.py  test_api_keys.py  test_auth.py  test_main.py  test_models.py  test_urls.py  test_utils.py
